--- a/publ/common/css/style.css
+++ b/publ/common/css/style.css
@@ -267,10 +267,7 @@ header.mobileViewGroup {
     font-size : 0;
     position : relative;
 }
-.tBoxGroup.btnMixSort .tbox {
-    width : calc(100% - 150px);
-    padding-right : 134px;
-}
+
 
 .regGroup.joinSort {
     margin-bottom : 90px;
@@ -340,23 +337,14 @@ footer {
 .footerCon .lowerGroup .rightGroup .titleBox:first-child {
     padding-top : 0;
 }
-.tipBox {
-    padding : 18px 0 18px 16px;
-    font-size : 12px;
-    text-align : left;
-}
+
 .tipBox.redSort {
     color : #ff5850;
 }
 .tipBox.blackSort {
     color : #000;
 }
-.tipBox.tCount {
-    position : absolute;
-    top : 0;
-    right : 100px;
-    font-size : 14px;
-}
+
 
 .tbox.addrSort[readonly] {
     border-bottom: 1px solid #efefef;
@@ -1642,17 +1630,7 @@ label .priceRed {
 .popTopSelector .bdBtn.activated {
     border-bottom : 1px solid #000;
 }
-.regGroup.logPopSort {
-    padding-top : 20px;
-    padding-bottom : 25px;
-}
-.regGroup.logPopSort .tbox {
-    height : 35px;
-}
-.regGroup.logPopSort .chkBlock {
-    padding-top : 25px;
-    text-align : left;
-}
+
 .btnGroup.loginBotSort {
     display : block;
 }
@@ -1695,9 +1673,7 @@ label .priceRed {
 .snsGroup .btnGroup .btn:first-child {
     padding-left : 0;
 }
-.logInfoBox {
-    display : block;
-}
+
 .logInfoBox.hide {
     display : none;
 }
@@ -4413,16 +4389,7 @@ li .infoGroup .chiefNameBox {
     font-size : 14px;
     border : 1px solid #d5d5d5;
 }
-.tBoxGroup.btnMixSort .bgBtn {
-    position : absolute;
-    right : 10px;
-    bottom : 3px;
-    /* width : 70px; */
-    padding : 0 18px;
-    height : 30px;
-    line-height : 30px;
-    border-radius: 3px;
-}
+
 .fullWidthBanner.termsCheckSort {
     max-width: 640px;
     margin: 50px auto 0 auto;
@@ -5022,6 +4989,7 @@ header {
 .mapDisplayGroup.locaMapSort {
     padding-top : 34%;
     overflow : hidden;
+    margin : 70px auto 130px auto;
 }
 .mapCover {
     position : absolute;
@@ -5033,3 +5001,99 @@ header {
 }
 /* :: innerC : 기존 내용 수정 + 신규 내용 추가. */
 /* :: close : ksg_20201220_1206 : [세무야] 회사소개 페이지 파트. */
+
+
+/* :: open : ksg_20201220_2103 : [세무야] 로그인 페이지 파트. */
+/* :: innerO : 신규 내용 파트. */
+.section.loginSort {
+    margin : 60px auto 150px auto;
+    max-width : 400px;
+    border : 1px solid #ddd;
+    padding : 50px 0 0 0;
+}
+.btnGroup.logBoxBotSort {
+    display : block;
+    margin :  75px auto 0 auto;
+    width : 100%;
+    border-top : 1px solid #ddd;
+    font-size : 0;
+}
+.btnGroup.logBoxBotSort .bgBtn {
+    background-color: #efefef;
+    width : 100%;
+    height : 55px;
+    line-height : 55px;
+    color : #000;
+}
+/* :: innerC : 신규 내용 파트. */
+/* :: innerO : 기존 내용 수정 파트. */
+.regGroup.loginSort {
+    padding-top : 20px;
+    padding-bottom : 25px;
+}
+.regGroup.loginSort .tbox {
+    height : 35px;
+}
+.regGroup.loginSort .chkBlock {
+    padding-top : 15px;
+    text-align : left;
+}
+.tBoxGroup.memberSort {
+    margin-top : 8px;
+}
+.tBoxGroup.memberSort.fstChd {
+    margin-top : 0;
+}
+.tipBox {
+    padding: 10px 0 5px 16px;
+    font-size: 12px;
+    text-align: left;
+}
+.logInfoBox {
+    display : block;
+    padding : 0 50px;
+}
+/* :: innerC : 기존 내용 수정 파트. */
+/* :: close : ksg_20201220_2103 : [세무야] 로그인 페이지 파트. */
+
+
+/* :: open : ksg_20201220_2206 : [세무야] 회원가입 페이지 파트. */
+/* :: innerO : 신규 내용 파트. */
+.section.joinSort {
+    max-width : 400px;
+    margin : 0 auto;
+}
+/* :: innerC : 신규 내용 파트. */
+/* :: innerO : 기존 내용 수정 파트. */
+.tBoxGroup.btnMixSort .tbox {
+    width: calc(100% - 190px);
+    padding-right: 170px;
+}
+.tBoxGroup.btnMixSort .bgBtn {
+    position : absolute;
+    right : 10px;
+    bottom : 10px;
+    padding : 0 18px;
+    height : 30px;
+    line-height : 30px;
+    border-radius: 3px;
+}
+.tBoxGroup.btnMixSort .bdBtn {
+    position : absolute;
+    right : 10px;
+    bottom : 10px;
+    padding : 0 18px;
+    height : 30px;
+    line-height : 30px;
+    border-radius: 3px;
+    font-weight : 800;
+}
+.tipBox.tCount {
+    bottom: 20px;
+    position: absolute;
+    right: 125px;
+    font-size: 14px;
+    padding: 0;
+}
+/* :: innerC : 기존 내용 수정 파트. */
+/* :: close : ksg_20201220_2206 : [세무야] 회원가입 페이지 파트. */
