<20201227_1736 세무야 publ 폴더 작업> 1. 진단표 페이지 작업.(진행중) 2. 다양한 구성 작업 : 라디오박스, 드롭박스, 입력창, 텍스트 에어리어 추가(진행중.) 2. publ\risk\riskMeasure.php 파일 작업. 2. 모의/일반 진단 공용 페이지임. 1. publ\risk\simulMeasure.php 파일 삭제. 2. 모의 진단을 별개 페이지로 둘 이유가 없으므로 제거함.

--- a/publ/common/css/style.css
+++ b/publ/common/css/style.css
@@ -5109,4 +5109,66 @@ header {
     font-weight : 400;
 }
 /* :: innerC : 신규 내용 파트. */
-/* :: open : ksg_20201226_2027 : [세무야] 모의진단 페이지 파트. */
+/* :: close : ksg_20201226_2027 : [세무야] 모의진단 페이지 파트. */
+
+/* :: open : ksg_20201227_1831 : [세무야] 진단하기 페이지 파트. */
+/* :: innerO : 신규 내용 파트. */
+.titleBox.segMinSort {
+    font-size : 20px;
+    padding-bottom : 20px;
+}
+.titleBox.segMinSort .subTitle {
+    font-size : 12px;
+    padding-top : 5px;
+    color : #979797;
+}
+.regGroup.measureSort .tBoxGroup {
+    margin-top: 16px;
+    font-size : 0;
+}
+.regGroup.measureSort {
+    margin-bottom: 90px;
+}
+
+.radioGroup.numCountSort input[type="radio"]:checked + label {
+	display : block;
+	width : 16px;
+    height : 16px;
+    line-height : 16px;
+    font-size : 14px;
+    text-align : center;
+    background : none;
+    background-color : #d22e1e;
+    color : #d22e1e;
+    border : 1px solid #000;
+    border-radius : 50%;
+}
+.radioGroup.numCountSort input[type="radio"]:not(:checked) + label {
+	display : block;
+	width : 16px;
+    height : 16px;
+    line-height : 16px;
+    font-size : 14px;
+    text-align : center;
+    background : none;
+    border : 1px solid #000;
+    border-radius : 50%;
+}
+.radioGroup.numCountSort .radioCase {
+    font-size : 0;
+    margin-left : 30px;
+}
+.radioGroup.numCountSort .radioCase:first-child {
+    margin-left : 0;
+}
+.tbox.shortSort {
+    width : 90px;
+}
+.tbox.normSort {
+    width : 280px;
+}
+.tbox.horizGapSort {
+    margin-left : 10px;
+}
+/* :: innerC : 신규 내용 파트. */
+/* :: close : ksg_20201227_1831 : [세무야] 진단하기 페이지 파트. */
