--- a/publ/common/css/ui.css
+++ b/publ/common/css/ui.css
@@ -658,3 +658,106 @@ img {
 }
 /* :: innerC : 신규 내용 파트. */
 /* :: close : ksg_20201220_1226 : [세무야] 회사소개 페이지 파트. */
+
+
+/* :: open : ksg_20201227_1804 : [세무야] 세무진단표 페이지 파트. */
+/* :: innerO : 신규 내용 파트. */
+.checkBoxCase {
+	position : relative;
+	display : inline-block;
+	/* width : 18px; */
+	width : auto;
+	height : 18px;
+}
+.radioCase {
+	position : relative;
+	display : inline-block;
+	width : auto;
+	height : auto;
+	margin-left : 50px;
+}
+.radioCase:first-child {
+	margin-left : 0;
+}
+input[type="checkbox"] {
+	opacity : 0;
+	width : 100%;
+	height : 18px;
+	position : absolute;
+	top : 0;
+	right : 0;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance : none;
+	outline : none;
+	border : none;
+	margin : 0;
+	cursor : pointer;
+}
+input[type="radio"] {
+	opacity : 0;
+	width : 100%;
+	height : 100%;
+	position : absolute;
+	top : 0;
+	right : 0;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance : none;
+	outline : none;
+	border : none;
+	margin : 0;
+	cursor : pointer;
+}
+input[type="checkbox"]:checked + label {
+	/* display : block; */
+	display : inline-block;
+	vertical-align : middle;
+	width : 18px;
+	height : 18px;
+	background : url("/publ/common/img/checkbox_full.png") no-repeat center / 100%;
+}
+input[type="checkbox"]:not(:checked) + label {
+	/* display : block; */
+	display : inline-block;
+	vertical-align : middle;
+	width : 18px;
+	height : 18px;
+	background : url("/publ/common/img/checkbox_empty.png") no-repeat center / 100%;
+}
+
+input[type="radio"]:checked + label {
+	display : block;
+	width : 16px;
+	height : 16px;
+	background : url("/publ/common/img/radio_full_pink.png") no-repeat center / 100%;
+}
+input[type="radio"]:not(:checked) + label {
+	display : block;
+	width : 16px;
+	height : 16px;
+	background : url("/publ/common/img/radio_empty_pink.png") no-repeat center / 100%;
+}
+.radioIconBox {
+    display: inline-block;
+	vertical-align: middle;
+	/* height : 23px; */
+}
+.radioCase .radioTitle {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+	font-size: 14px;
+	font-weight : 600;
+	font-family : "Noto Sans KR",sans-serif;
+}
+.checkBoxCase .checkBoxTitle {
+	display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+	font-size: 14px;
+	font-weight : 600;
+	font-family : "Noto Sans KR",sans-serif;
+}
+/* :: innerC : 신규 내용 파트. */
+/* :: close : ksg_20201227_1804 : [세무야] 세무진단표 페이지 파트. */
