--- a/manager/common/css/ui.css
+++ b/manager/common/css/ui.css
@@ -261,7 +261,7 @@ input[type="radio"]:not(:checked) + label {
     border-radius: 4px;
     padding: 0 30px;  
     width: auto;
-	height: 44px;
+	height: 40px;
 	font-family: "Noto Sans KR",sans-serif;
 	box-sizing : border-box;
 }
@@ -393,6 +393,9 @@ input[type="radio"]:not(:checked) + label {
 
 
 /* :: 마진 파트 open */
+.ml8 {
+	margin-left : 8px;
+}
 .ml10 {
 	margin-left : 10px;
 }
