[20210210_2213 완료] -> 1. 세무야 관리자 페이지 [20210210_2213 완료] -> 2. [세무야 관리자] 세무조사위험진단내역 작업. [20210210_2213 완료] -> 3. 검색파트 작업. [20210210_2213 완료] -> 3. 리스트 파트 작업. [20210210_2213 완료] -> 3. user\userMeasure.php 작업.

--- a/manager/common/css/style.css
+++ b/manager/common/css/style.css
@@ -492,5 +492,14 @@ input.tbox.datepickMod:read-only {
 	font-size : 12px;
 	margin-left : 8px;
 }
+.btn_inListDl {
+	display : inline-block;
+	height : 38px;
+	line-height : 38px;
+	padding : 0 18px;
+	background-color: #2e2f37;
+    color: #fff;
+	border-radius : 4px;
+}
 /* :: inC : 신규 내용 파트. */
 /* :: close : ksg_20210210_2052 : [세무야] 회원관리_회원목록 페이지 내용. */
