--- a/manager/common/css/style.css
+++ b/manager/common/css/style.css
@@ -503,3 +503,88 @@ input.tbox.datepickMod:read-only {
 }
 /* :: inC : 신규 내용 파트. */
 /* :: close : ksg_20210210_2052 : [세무야] 회원관리_회원목록 페이지 내용. */
+
+/* :: open : ksg_20210212_1303 : [세무야] 전문가관리_전문가목록 페이지 내용. */
+/* :: inO : 신규 내용 파트. */
+.radioGroup.inList_vert1 {
+	width : 70px;
+	margin : 0 auto;
+	text-align : left;
+}
+.radioGroup.inList_vert1 .radioCase {
+	display : block;
+	margin-left : 0;
+	margin-top : 10px;
+}
+.radioGroup.inList_vert1 .radioCase:first-child {
+	margin-top : 0;
+}
+/* :: inC : 신규 내용 파트. */
+/* :: close : ksg_20210212_1303 : [세무야] 전문가관리_전문가목록 페이지 내용. */
+
+
+/* :: open : ksg_20210212_1321 : [세무야] 전문가관리_전문가등록 페이지 내용. */
+.vertCase_inReg {
+	margin-top : 10px;
+}
+.vertCase_inReg.fstChd {
+	margin-top : 0;
+}
+.voidSpace_invis {
+	visibility : hidden;
+}
+
+
+
+
+.imgUploadBox.textOnlySort {
+    display: block;
+    position: relative;
+    width: 100%;
+	height: 40px;
+    font-size: 0;
+    line-height: 40px;
+}
+.imgUploadBox.textOnlySort .fileNameCase {
+    width: 670px;
+    border: 1px solid #e9ecef;
+    background-color: #fff;
+	height: 40px;
+    vertical-align: middle;
+    display: inline-block;
+}
+.imgUploadBox.textOnlySort .filePholder {
+    display: none;
+}
+.imgUploadBox.textOnlySort .fileName.uploadSort {
+    position: absolute;
+    top: 0;
+    left: 25px;    
+    font-size: 12px;
+	line-height : 40px;
+}
+.imgUploadBox.textOnlySort canvas {
+    display: none;
+}
+.imgUploadBox.textOnlySort img {
+    display: none;
+}
+.imgUploadBox.textOnlySort .btn.imgDownMod {
+	height : 40px;
+	line-height : 40px;
+	vertical-align : middle;
+	background-color : #eb6108;
+	padding : 0 10px;
+	color : #fff;
+	font-size : 13px;
+}
+.imgUploadBox.textOnlySort .btn.imgDelMod {
+	height : 40px;
+	line-height : 40px;
+	vertical-align : middle;
+	padding : 0 10px;
+	background-color: #2e2f37;
+	color : #fff;
+	font-size : 13px;
+}
+/* :: close : ksg_20210212_1321 : [세무야] 전문가관리_전문가등록 페이지 내용. */
