[20210212_1640 일부 완료] -> 1. 세무야 관리자 페이지 [20210212_1511 완료] -> 2. [세무야 관리자] 모의측정설문 등록 페이지 작업. [20210212_1511 완료] -> 3. taxManage\taxManageReg.php 작업. [20210212_1527 완료] -> 2. [세무야 관리자] 세무상품 목록 페이지 작업. [20210212_1527 완료] -> 3. taxManage\manageGoods.php 작업. [20210212_1600 완료] -> 2. [세무야 관리자] 세무상품 등록 페이지 작업. [20210212_1600 완료] -> 3. taxManage\manageGoodsReg.php 작업. [20210212_1613 완료] -> 2. [세무야 관리자] 솔루션문의 목록 페이지 작업. [20210212_1613 완료] -> 3. solution\index.php 작업. [20210212_1613 완료] -> 3. solution\pages\solution_left.php 작업. [20210212_1627 완료] -> 2. [세무야 관리자] 솔루션문의 등록 페이지 작업. [20210212_1627 완료] -> 3. solution\solutionQReg.php 작업. [20210212_1639 완료] -> 2. [세무야 관리자] 공지사항 목록 페이지 작업. [20210212_1639 완료] -> 3. board\notice.php 작업.

--- a/manager/common/css/style.css
+++ b/manager/common/css/style.css
@@ -481,6 +481,9 @@ input.tbox.datepickMod:read-only {
 	border-radius : 4px;
 	background-color : #2e2f37;
 }
+.regTblBtn_inputRSort.leftLooseSort {
+	margin-left : 20px;
+}
 .sbox.normMod1 {
     width: 165px;
     margin-left: 8px;
@@ -491,6 +494,9 @@ input.tbox.datepickMod:read-only {
 .measureGaugeTxt {
 	font-size : 12px;
 	margin-left : 8px;
+}
+.measureGaugeTxt.leftTightSort {
+	margin-left : 0;
 }
 .btn_inListDl {
 	display : inline-block;
@@ -533,10 +539,6 @@ input.tbox.datepickMod:read-only {
 .voidSpace_invis {
 	visibility : hidden;
 }
-
-
-
-
 .imgUploadBox.textOnlySort {
     display: block;
     position: relative;
