[20210217_1716 일부 완료] -> 1. 세무야. [20210217_1716 일부 완료] -> 2. 관리자 페이지 작업하기. [20210217_1716 일부 완료] -> 3. 어제 변경 논의사항 작업하기. [20210217_1716 일부 완료] -> 4. "0. 세무야 관리자_주원이형 회의 내용.(작업용)" 메모 내용 작업하기. [20210217_1716 일부 완료] -> 5. 개인 git 매니저 폴더 작업하기. [20210216_1633 완료] -> 1. 관리자 결제관리 페이지. [20210216_1621 완료] -> 2. 헤드에 결제관리 그룹 개별로 만들기. [20210216_1633 완료] -> 2. 결제는 카드결제만 가정한다. [20210216_1633 완료] -> 2. 결제일 / 아이디 / 이름 / 상호 / 전화번호 / 결제수단 / 결제금액 / 이용서비스. [20210216_1621 완료] -> 2. 환불 버튼은 유지. [20210216_1633 완료] -> 3. 환불버튼 클릭 시, 환불하시겠습니까 팝업 띄우기. [20210216_1621 완료] -> 2. common\pages\header.php 작업. [20210216_1621 완료] -> 2. pay\index.php 작업. [20210216_1621 완료] -> 2. pay\pages\pay_left.php 작업. [20210216_1702 완료] -> 1. 관리자 전문가 등록 페이지. [20210216_1702 완료] -> 2. 경력, 전문분야 입력하는 길이 제한하기. (유저 페이지에서 내용 길어지면 틀 깨지므로.) [20210216_1655 완료] -> 2. 유저 페이지의 내용 반영하기. -> 대표문구 / 이름 / 직함 / 경력문구1,2,3 / 전문분야(텍스트로 입력) 필요. [20210216_1700 완료] -> 2. 유저페이지의 구분탭 내용을 체크박스로 선택 가능하게 관리자에 반영하기. [20210216_1700 완료] -> 2. 상담 완료 수 등 표시 필요(?) [20210216_1745 완료] -> 1. 관리자 전문가 세무상담내역 페이지. [20210216_1731 완료] -> 2. 완료 / 미완료 / 반려 로 진행상태 구성하기. -> 상담 완료 버튼 필요. [20210216_1745 완료] -> 2. 미정산/정산 내역 선별적으로 표시하게 하기. [20210216_1713 완료] -> 2. 선택 항목만 일괄 정산 가능해야 함. -> 일괄선택정산 버튼 필요. [20210216_1706 완료] -> 2. expert\expertConsult.php 작업. [20210217_1716 일부 완료] -> 1. 관리자 직원관리. [20210217_1533 일부 완료] -> 2. 직원관리 그룹 만들기. [20210217_1716 일부 완료] -> 3. 상단탭 / 목록 페이지 / 상세 및 등록 팝업. [20210217_1716 완료] -> 4. 리스트 페이지 내용 작업.
[20210217_1533 완료] -> 3. staff\index.php 작업.
[20210217_1533 완료] -> 3. staff\pages\staff_left.php 작업.

--- a/manager/common/css/style.css
+++ b/manager/common/css/style.css
@@ -346,7 +346,12 @@ header .logoCase i {
     top: 0;
     right: 0;
     text-align: right;
-	width : 100%;
+	/* :: inO : ksg_20210216_1711 : 제거 내용. */
+	/* width : 100%; */
+	/* :: inC : ksg_20210216_1711 : 제거 내용. */
+	/* :: inO : ksg_20210216_1711 : 수정 내용. */
+	width : 500px;
+	/* :: inC : ksg_20210216_1711 : 수정 내용. */
 }
 .sbox.shortMod {
 	width : 100px;
@@ -362,14 +367,6 @@ header .logoCase i {
 .sbox.shortMod2:first-child {
     margin-left: 0;
 }
-
-
-
-
-
-
-
-
 
 .headLine.listUpperSort .ctrlBtn_rSort {
 	display: inline-block;
@@ -896,3 +893,33 @@ input.tbox.datepickMod:read-only {
     color: #fff;
 }
 /* :: close : ksg_20210216_1453 : [세무야] 회원관리_회원목록 페이지 내용. */
+
+/* :: open : ksg_20210216_1632 : [세무야] 결제관리_결제내역 페이지 내용. */
+.popTxtBox_single1 {
+	padding : 20px;
+	text-align : center;
+}
+/* :: close : ksg_20210216_1632 : [세무야] 결제관리_결제내역 페이지 내용. */
+
+/* :: open : ksg_20210216_1709 : [세무야] 전문가관리_전문가세무상담내역 페이지 내용. */
+.ctrlBtn_lSort {
+	display: inline-block;
+    width: 90px;
+    height: 38px;
+    background-color: #2e2f37;
+    color: #fff;
+    font-size: 13px;
+    text-align: center;
+    line-height: 38px;
+    border-radius: 4px;
+}
+.btnLayer_inslist {
+	display : block;
+	margin : 3px auto 0 auto;
+	text-align : left;
+	width : 105px;
+}
+.btnLayer_inslist.fstChd {
+	margin-top : 0;
+}
+/* :: close : ksg_20210216_1709 : [세무야] 전문가관리_전문가세무상담내역 페이지 내용. */
