[20210217_1853 완료] -> 0. 세무야 [20210217_1852 완료] -> 1. 관리자 직원관리. [20210217_1852 완료] -> 2. 직원관리 그룹 만들기. [20210217_1852 완료] -> 3. 상단탭 / 목록 페이지 / 상세 및 등록 팝업. [20210217_1852 완료] -> 4. 리스트 페이지 내용 작업. [20210217_1852 완료] -> 4. 상세 팝업 작업. [20210217_1852 완료] -> 4. 등록 팝업 작업. [20210217_1533 완료] -> 3. staff\index.php 작업. [20210217_1533 완료] -> 3. staff\pages\staff_left.php 작업.

--- a/manager/common/css/style.css
+++ b/manager/common/css/style.css
@@ -285,11 +285,6 @@ header .logoCase i {
 	vertical-align : middle;
 }
 
-
-
-
-
-
 .tbox.singleNorm1 {
 	width : 270px;
 	/* :: open : ksg_20210215_1809 : 추가 내용. */
@@ -307,6 +302,10 @@ header .logoCase i {
 	/* :: open : ksg_20210215_1809 : 추가 내용. */
 	vertical-align : middle;
 	/* :: close : ksg_20210215_1809 : 추가 내용. */
+}
+.tbox.singleLong2 {
+	width : 495px;
+	vertical-align : middle;
 }
 
 .searchBtn_fullHSort {
