--- a/manager/common/css/style.css
+++ b/manager/common/css/style.css
@@ -53,7 +53,7 @@ body{
 
 
 .contents.introSort {
-	background-color : #434ff6;
+	background-color : #fff;
 	margin-left : 0;
 	width : 100%;
 	height : 100%;
@@ -970,3 +970,85 @@ input.tbox.datepickMod:read-only {
 	margin-top : 0;
 }
 /* :: close : ksg_20210216_1709 : [세무야] 전문가관리_전문가세무상담내역 페이지 내용. */
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ::  open : ksg_20210218_1957 : [세무야] 로그인 페이지 내용. */
+.section.loginSort {
+	position : absolute;
+	top : 50%;
+	transform : translateY(-50%);
+	-webkit-transform : translateY(-50%);
+	width : 100%;
+	height : calc(100% - 300px);
+	max-height : calc(100% - 50px);
+	min-height : 500px;
+}
+.loginInfoGroup {
+	display : block;
+	width : 600px;
+	margin : 0 auto;
+	border-radius : 30px;
+	background-color : #fff;
+	padding : 50px 0;
+	height : calc(100% - 100px);
+	max-height : 905px;
+	position : relative;
+	max-width : 1280px;
+	border : 4px solid #eb6108;
+}
+
+
+
+.loginInnerInfo {
+	position : absolute;
+	top : 50%;
+	transform : translateY(-50%);
+	-webkit-transform : translateY(-50%);
+	width : 100%;
+
+}
+
+.iconBox.loginSort {
+	display : block;
+	width : 388px;
+	text-align : left;
+	padding : 0 6px;
+	margin : 0 auto;
+}
+.titleBox.loginSort {
+	display : block;
+	font-size : 50px;
+	letter-spacing : 10px;
+}
+.subTitleBox.loginSort {
+	margin-top : 30px;
+	font-size : 20px;
+	color : #969696;
+}
+.inputGroup.loginSort {
+	display : block;
+	width : 400px;
+	margin : 60px auto 30px auto;
+}
+.btn.loginBtn {
+	display : block;
+	width : 400px;
+	height : 50px;
+	line-height : 50px;
+	border-radius : 25px;
+	background-image : linear-gradient(to right, #eb6108, #eb6108 100%);
+	margin : 0 auto;
+	color : #fff;
+}
+/* ::  close : ksg_20210218_1957 : [세무야] 로그인 페이지 내용. */
