[20210221_2232 일부 완료] -> 1. 세무야 관리자 페이지 작업 필요사항. [20210221_2232 일부 완료] -> 2. 전문가 전문분야 / 경력 등록 페이지 필요. [20210221_2231 완료] -> 3. 전문분야 페이지 작업. [20210221_2231 완료] -> 4. "expert\expertField.php" 작업. [20210221_2231 완료] -> 4. "expert\pages\expert_left.php" 작업. [20210221_2216 완료] -> 3. 파비콘 에로 수정. [20210221_2216 완료] -> 4. 파비콘 붙이기. [20210221_2216 완료] -> 5. 이미지 추가함. [20210221_2216 완료] -> 5. "common\pages\head.php" 작업. [20210221_2224 완료] -> 3. 경력 페이지 작업. [20210221_2120 완료] -> 4. "expert\pages\expert_left.php" 작업. [20210221_2120 완료] -> 4. "expert\career.php" 작업. [20210221_2147 완료] -> 4. 순서 변경 아이콘 이미지 추가. [20210221_2153 완료] -> 4. "common\css\ui.css" 작업. [20210221_2216 완료] -> 4. 등록 파트 작업. [20210221_2216 완료] -> 4. 순서 변경 작동하게 하기. [20210221_2230 완료] -> 3. 리스트 내 각 항목마다 인풋 및 수정 버튼 필요. [20210221_2230 완료] -> 3. 기본은 목록형 페이지. [20210221_2231 완료] -> 3. 등록은 상단의 개별 테이블로. -> 검색 테이블을 전용하면 될 듯. [20210221_2231 완료] -> 3. 필요사항은 순서, 내용, 사용여부, 적용대상 숫자, 관리(삭제). [20210221_2231 완료] -> 4. 순서 변경은 화살표로.

--- a/manager/common/css/style.css
+++ b/manager/common/css/style.css
@@ -1052,3 +1052,17 @@ input.tbox.datepickMod:read-only {
 	color : #fff;
 }
 /* ::  close : ksg_20210218_1957 : [세무야] 로그인 페이지 내용. */
+
+/* :: open : ksg_20210221_2149 : [세무야] 전문가 경력 관리 페이지 내용. */
+.btnGroup_orderChange {
+	font-size : 0;
+}
+.btnGroup_orderChange .changeBtn {
+	display : inline-block;
+	margin-left : 2px;
+}
+.btnGroup_orderChange .changeBtn:first-child {
+	display : inline-block;
+	margin-left : 0;
+}
+/* :: close : ksg_20210221_2149 : [세무야] 전문가 경력 관리 페이지 내용. */
